--- a/public/books/updateBook.html
+++ b/public/books/updateBook.html
@@ -1,11 +1,54 @@
 <!DOCTYPE html>
-<html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <title>Actualizar Libro</title>
-        <link rel="stylesheet" href="../css/base.css">
-    </head>
-    <body>
+<html>
+
+<head>
+  <title>TitanDev - Actualizar Libro</title>
+  <link rel="stylesheet" type="text/css" href="../css/base.css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
+</head>
+
+<body>
+  <div id="topmenu-container">
+    <div class="topmenu-item">
+      <span class="helper"><img src="../img/logo-white.png" alt="TitanDev Logo" width="30" height="30"></span>
+      <span class="helper"><img src="../img/titandev-text.png" alt="TitanDev Logo" width="118" height="18"></span>
+    </div>
+    <div class="topmenu-item"><a href="../about.html">Sobre nosotros</a></div>
+    <div class="topmenu-item"><a href="../aboutapp.html">Nuestro Producto</a></div>
+    <div class="topmenu-item user-profile">
+      <span class="helper">
+        <a id="user-profile-trigger">John Malkovich &nbsp; <img src="../img/user-portrait.jpeg" alt="Usuario"
+            height="30" width="30"></a>
+      </span>
+      <div id="profile-menu" style="display: none">
+        <ul>
+          <li><a href="../profile.html">Perfil</a></li>
+          <li><a href="../logout">Logout</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div id="content-container">
+    <div id="leftmenu" class="left-menu-close">
+      <ul>
+        <li><a href="../index.html"><img src="../img/home.png" alt="Home"><span
+              class="left-menu-item-text hidden">Home</span></a></li>
+        <li><a href="../libraries/index.html"><img src="../img/library.png" alt="Librerias"><span
+              class="left-menu-item-text hidden">Librerías</span></a></li>
+        <li><a href="../books/listBooks.html"><img src="../img/book.png" alt="Libros"><span
+              class="left-menu-item-text hidden">Libros</span></a></li>
+        <li><a href="../authors/authorsList.html"><img src="../img/author.png" alt="Autores"><span
+              class="left-menu-item-text hidden">Autores</span></a></li>
+        <li><a href="../clubs/listClubs.html"><img src="../img/clubs.png" alt="Clubes de lectura"><span
+              class="left-menu-item-text hidden">Clubes de lectura</span></a></li>
+        <li><a href="../Genre/index.html"><img src="../img/genre.png" alt="Genero"><span
+              class="left-menu-item-text hidden">Generos</span></a></li>
+        <li><a href="../users/register.html"><img src="../img/user.png" alt="Usuario"><span
+              class="left-menu-item-text hidden">Usuario</span></a></li>
+      </ul>
+    </div>
+
+    <div id="content">
         <form id ="bookForm">
             <div>
                 <label for="txt_name">Nombre</label>
@@ -41,7 +84,7 @@
             <div>
                 <label for="txt_description">Descripción</label>
                 <textarea id = "txt_description" rows = "10" name = "txt_description"></textarea>
-                </div>
+            </div>
             <div>
                 <label for="txt_year">Año</label>
                 <input type="number" id="txt_year">
@@ -80,7 +123,7 @@
                 <input type="number" id="txt_quantity">
             </div>
             <div>
-                <button type="button" id="btn_update">Actualizar</button>
+                <button type="button" id="btn_update">Editar</button>
             </div>
 
         </form>
@@ -93,6 +136,8 @@
         <script src="../js/images.js"></script>
         <script src='https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js' type='text/javascript'></script>
         <script src="https://widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+
+        <script type="text/javascript" src="../js/layout.js"></script>
     </body>
 
 </html>
