--- a/public/clubs/updateClub.html
+++ b/public/clubs/updateClub.html
@@ -1,20 +1,62 @@
 <!DOCTYPE html>
-<html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <title>Actualizar Club</title>
-        <link rel="stylesheet" href="../css/base.css">
-    </head>
-    <body>
+<html>
+
+<head>
+  <title>TitanDev - Actualizar Club</title>
+  <link rel="stylesheet" type="text/css" href="../css/base.css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
+</head>
+
+<body>
+  <div id="topmenu-container">
+    <div class="topmenu-item">
+      <span class="helper"><img src="../img/logo-white.png" alt="TitanDev Logo" width="30" height="30"></span>
+      <span class="helper"><img src="../img/titandev-text.png" alt="TitanDev Logo" width="118" height="18"></span>
+    </div>
+    <div class="topmenu-item"><a href="../about.html">Sobre nosotros</a></div>
+    <div class="topmenu-item"><a href="../aboutapp.html">Nuestro Producto</a></div>
+    <div class="topmenu-item user-profile">
+      <span class="helper">
+        <a id="user-profile-trigger">John Malkovich &nbsp; <img src="../img/user-portrait.jpeg" alt="Usuario"
+            height="30" width="30"></a>
+      </span>
+      <div id="profile-menu" style="display: none">
+        <ul>
+          <li><a href="../profile.html">Perfil</a></li>
+          <li><a href="../logout">Logout</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div id="content-container">
+    <div id="leftmenu" class="left-menu-close">
+      <ul>
+        <li><a href="../index.html"><img src="../img/home.png" alt="Home"><span
+              class="left-menu-item-text hidden">Home</span></a></li>
+        <li><a href="../libraries/index.html"><img src="../img/library.png" alt="Librerias"><span
+              class="left-menu-item-text hidden">Librerías</span></a></li>
+        <li><a href="../books/listBooks.html"><img src="../img/book.png" alt="Libros"><span
+              class="left-menu-item-text hidden">Libros</span></a></li>
+        <li><a href="../authors/authorsList.html"><img src="../img/author.png" alt="Autores"><span
+              class="left-menu-item-text hidden">Autores</span></a></li>
+        <li><a href="../clubs/listClubs.html"><img src="../img/clubs.png" alt="Clubes de lectura"><span
+              class="left-menu-item-text hidden">Clubes de lectura</span></a></li>
+        <li><a href="../Genre/index.html"><img src="../img/genre.png" alt="Genero"><span
+              class="left-menu-item-text hidden">Generos</span></a></li>
+        <li><a href="../users/register.html"><img src="../img/user.png" alt="Usuario"><span
+              class="left-menu-item-text hidden">Usuario</span></a></li>
+      </ul>
+    </div>
+
+    <div id="content">
         <form>
             <div>
                 <label for="txt_name">Nombre</label>
                 <input type="text" id="txt_name">
             </div>
             <div>
-                <label for="txt_type">Tipo</label>
+                <label for="slt_type">Tipo</label>
                 <select id="slt_type">
-                    <option value=""></option>
                     <option value="Virtual">Virtual</option>
                     <option value="Presencial">Presencial</option>
                 </select>
@@ -22,7 +64,6 @@
             <div>
                 <label for="slt_genre">Género</label>
                 <select id="slt_genre">
-                    <option value=""></option>
                     <option value="Ficción">Ficción</option>
                     <option value="Terror">Terror</option>
                     <option value="Comedia">Comedia</option>
@@ -39,7 +80,6 @@
             <div>
                 <label for="slt_startTime">Hora de inicio</label>
                 <select id="slt_startTime">
-                    <option value=""></option>
                     <option value="8:00 am">8:00 am</option>
                     <option value="9:00 am">9:00 am</option>
                     <option value="10:00 am">10:00 am</option>
@@ -55,7 +95,6 @@
             <div>
                 <label for="slt_endTime">Hora de finalización</label>
                 <select id="slt_endTime">
-                    <option value=""></option>
                     <option value="9:00 am">9:00 am</option>
                     <option value="10:00 am">10:00 am</option>
                     <option value="11:00 am">11:00 am</option>
@@ -71,7 +110,6 @@
             <div>
                 <label for="slt_day">Día</label>
                 <select id="slt_day">
-                    <option value=""></option>
                     <option value="Lunes">Lunes</option>
                     <option value="Martes">Martes</option>
                     <option value="Miercoles">Miercoles</option>
@@ -86,7 +124,7 @@
                 <input type="text" id="txt_branch">
             </div>
             <div>
-                <button type="button" id="btn_update">Editar Club</button>
+                <button type="button" id="btn_update">Editar</button>
             </div>
 
         </form>
@@ -95,5 +133,6 @@
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2"></script> 
         
         <script src="../js/clubs/updateClub.js"></script>
+        <script type="text/javascript" src="../js/layout.js"></script>
     </body>
 </html>
