--- a/public/libraries/detail.html
+++ b/public/libraries/detail.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>TitanDev - Home</title>
+  <title>TitanDev - Perfil de Librería</title>
   <link rel="stylesheet" type="text/css" href="../css/base.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
   <script type="text/javascript" src="../js/OpenLayers.js"></script>
