--- a/public/users/signin.html
+++ b/public/users/signin.html
@@ -28,11 +28,11 @@
       </div>
 
       <p class="center"><button type="button" class="button-primary" id="btnSignIn">Iniciar Sesión</button></p><br>
-      <p class="center"><a href="./register.html">No es usuario aún? Regístrate acá</a></p>
+      <p class="center"><a href="./register.html">¿No eres usuario aún? Regístrate acá</a></p>
     </form>
   </div>
   <div class="login-box">
-    <p>Tienes una líbrera y quieres formar parte de nosotros?</p>
+    <p>¿Tienes una librería y quieres formar parte de nosotros?</p>
     <p><a href="../libraries/register.html">Regístrala acá</a></p>
   </div>
 
